Fix some shortcuts not working; On macOS you need to have the equivalent menu items for shortcuts like cmd+A (Select-All) to work.
See:
https://github.com/moose-team/friends/issues/123

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "core-util-is": "^1.0.2",
     "electron-context-menu": "^0.15.1",
+    "electron-default-menu": "^1.0.1",
     "electron-store": "^2.0.0"
   }
 }
